--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -60,8 +60,8 @@
         </com.google.android.material.textfield.TextInputLayout>
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_marginTop="@dimen/dp_16"
-            android:background="@color/colorPrimaryDark"
             android:id="@+id/imv_picker_image"
+            android:src="@drawable/avatar"
             app:layout_constraintTop_toBottomOf="@id/til_birthday"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
