--- a/app/src/main/res/menu/menu_row_course.xml
+++ b/app/src/main/res/menu/menu_row_course.xml
@@ -3,4 +3,7 @@
     <item
         android:id="@+id/item_unrollCourse"
         android:title="Xoá" />
+    <item
+        android:id="@+id/item_chat"
+        android:title="chat" />
 </menu>
