--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -85,7 +85,8 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/bt_register"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
+        android:backgroundTint="@color/blue"
         android:layout_height="wrap_content"
         android:text="@string/title_register"
         app:layout_constraintEnd_toEndOf="parent"
