--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/dp_32"
         android:paddingEnd="@dimen/dp_32"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingTop="@dimen/dp_48"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -58,37 +58,47 @@
                 android:maxLines="1"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_marginTop="@dimen/dp_16"
-            android:id="@+id/imv_picker_image"
-            android:src="@drawable/avatar"
-            app:layout_constraintTop_toBottomOf="@id/til_birthday"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="@dimen/dp_137"
-            android:layout_height="@dimen/dp_137" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        app:layout_constraintTop_toBottomOf="@id/constraintLayout"
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <androidx.appcompat.widget.AppCompatImageView
+            android:src="@drawable/avatar"
+            android:padding="8dp"
+            android:id="@+id/aciv_img1"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="150dp" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/aciv_img2"
+            android:padding="8dp"
+            android:src="@drawable/avatar"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="150dp" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:src="@drawable/avatar"
+            android:padding="8dp"
+            android:id="@+id/aciv_img3"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="150dp" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/bt_continue"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
+        android:backgroundTint="@color/blue"
         android:layout_height="wrap_content"
         android:text="@string/title_continue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        app:layout_constraintTop_toBottomOf="@+id/image"
         app:layout_constraintBottom_toBottomOf="parent"/>
-
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/dp_137"
-        android:src="@drawable/logo"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
 
 
     <androidx.core.widget.ContentLoadingProgressBar
