--- a/app/src/main/res/layout/item_rv_reply.xml
+++ b/app/src/main/res/layout/item_rv_reply.xml
@@ -15,22 +15,30 @@
         android:paddingTop="5dp"
         android:layout_marginTop="2dp"
         android:paddingBottom="5dp"
-        android:layout_toRightOf="@id/iv_avatar_reply">
+        android:layout_alignParentLeft="true">
         <TextView
-            android:id="@+id/tv_reply"
+            android:id="@+id/tv_name"
+            android:text="Hoàng Cường"
+            android:textStyle="bold"
+            android:textSize="14dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_below="@id/tv_name"
+            android:id="@+id/tv_text_chat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#ececec"
-            android:text="AAAAAAAAAAAAAAAAAAAA"
-            />
+            android:text="AAAAAAAAAAAAAAAAAAAA" />
+        <TextView
+            android:textSize="12dp"
+            android:layout_marginTop="3dp"
+            android:id="@+id/tv_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_toRightOf="@id/tv_name"
+            android:text="16:30, 27/09" />
     </RelativeLayout>
-    <ImageView
-        android:id="@+id/iv_avatar_reply"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginRight="8dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true" />
 
 </RelativeLayout>
