--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,11 +2,17 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light">
+        <item name="android:colorPrimaryDark">@color/blue</item>
+
     </style>
 
     <style name="AppTheme.NoActionBar" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="windowActionBar">false</item>
+        <item name="android:colorPrimaryDark">@color/blue</item>
         <item name="windowNoTitle">true</item>
+    </style>
+    <style name="CMOptionsMenu" parent="Theme.MaterialComponents.CompactMenu">
+        <item name="android:popupBackground">#FFFFFF</item>
     </style>
 
 </resources>
