--- a/app/src/main/res/layout/dialog_gps_setting.xml
+++ b/app/src/main/res/layout/dialog_gps_setting.xml
@@ -1,48 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
-    android:layout_height="200dp">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/tv"
-        android:textStyle="bold"
-        android:textSize="@dimen/dp_16"
-        android:layout_margin="@dimen/dp_16"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="GPS is settings"/>
+        android:layout_centerHorizontal="true"
+        android:layout_margin="@dimen/dp_16"
+        android:gravity="center"
+        android:text="GPS is settings"
+        android:textSize="@dimen/dp_16"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/edt_email_dialog"
-        android:layout_margin="@dimen/dp_16"
-        android:layout_below="@id/tv"
-        android:text=" GPS is not enabled. Do you want to go to setting menu"
         android:layout_width="match_parent"
-        android:layout_height= "wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv"
+        android:layout_margin="@dimen/dp_16"
+        android:text=" GPS is not enabled. Do you want to go to setting menu" />
 
     <LinearLayout
-        android:layout_margin="@dimen/dp_16"
-        android:layout_below="@id/edt_email_dialog"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/edt_email_dialog"
+        android:layout_marginStart="@dimen/dp_16"
+        android:layout_marginTop="@dimen/dp_16"
+        android:layout_marginEnd="@dimen/dp_16"
+        android:layout_marginBottom="@dimen/dp_16">
+
         <Button
-            android:gravity="center"
-            android:text="SETTINGS"
-            android:layout_weight="1"
             android:id="@+id/bt_setting_dialog"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginRight="8dp"/>
+            android:layout_height="50dp"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="SETTINGS" />
+
         <Button
             android:id="@+id/bt_cancel_dialog"
-            android:gravity="center"
-            android:text="Cancel"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
             android:layout_marginLeft="8dp"
             android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent" />
+            android:gravity="center"
+            android:text="Cancel" />
     </LinearLayout>
 
 </RelativeLayout>
